# bigworlds

./: .gitignore  Cargo.toml  DESIGN.md  README.md
.github/workflows/: rust.yml
bigworlds/: Cargo.toml  build.rs  rustfmt.toml
bigworlds-cli/: Cargo.toml
bigworlds-cli/src/: cli.rs  leader.rs  node.rs  run.rs  util.rs  worker.rs
bigworlds-cli/src/interactive/: compl.rs  config.rs  img_print.rs  mod.rs
bigworlds/examples/: repl.rs  stress.rs
bigworlds/src/: address.rs  error.rs  lib.rs  node.rs  query.rs  sim.rs  time.rs  util.rs  var.rs
bigworlds/src/behavior/: dynlib.rs  mod.rs
bigworlds/src/client/: async.rs  ws.rs
bigworlds/src/entity/: mod.rs  storage.rs
bigworlds/src/leader/: config.rs  exec.rs  manager.rs  mod.rs  pov.rs
bigworlds/src/machine/: exec.rs  mod.rs
bigworlds/src/machine/cmd/: attach.rs  eval.rs  invoke.rs  mod.rs  set.rs  spawn.rs
bigworlds/src/machine/cmd/flow/: _loop.rs  component.rs  forin.rs  machine.rs  procedure.rs  state.rs
bigworlds/src/machine/script/: bridge.rs  mod.rs  preprocessor.rs
bigworlds/src/model/: behavior.rs  intermediate.rs  mod.rs
bigworlds/src/net/: mod.rs  quic.rs  ws.rs
bigworlds/src/node/: config.rs  pov.rs
bigworlds/src/query/: process.rs
bigworlds/src/rpc/: leader.rs  machine.rs  mod.rs  node.rs
bigworlds/src/rpc/msg/: mod.rs
bigworlds/src/server/: cache.rs  config.rs  exec.rs  http.rs  mod.rs  pov.rs  stats.rs
bigworlds/src/server/grpc/: conversions.rs  mod.rs  query_conversions.rs  service.rs
bigworlds/src/worker/: config.rs  exec.rs  manager.rs  mod.rs  part.rs
bigworlds/tests/: archive.rs  behavior.rs  broadcast.rs  election.rs  hotswap.rs  machine.rs  nested.rs  query.rs  ring.rs  shuffle.rs  subscribe.rs  subscription.rs  topologies.rs
bigworlds/tests/common/: mod.rs
cli/: Cargo.toml  README.md
cli/src/: cli.rs  client.rs  leader.rs  main.rs  node.rs  run.rs  server.rs  tracing.rs  util.rs  worker.rs
cli/src/interactive/: compl.rs  local.rs  mod.rs  remote.rs
clients/grpc-client/: Cargo.toml  README.md  build.rs
clients/grpc-client/src/: lib.rs
clients/messageio-client/: Cargo.toml
clients/messageio-client/src/: lib.rs
clients/tcp-client/: Cargo.toml
examples/: README.md
examples/boids/: README.md  model.toml
examples/boids/behavior/: Cargo.toml  behavior.toml
examples/boids/behavior/src/: lib.rs
examples/cars/: README.md
examples/cubes/: README.md  model.toml
examples/cubes/behaviors/setup/: Cargo.toml  behavior.toml
examples/cubes/behaviors/setup/src/: lib.rs
examples/cubes/services/rapier/: Cargo.toml
examples/cubes/services/rapier/src/: main.rs
examples/cubes/viewers/bevy/: Cargo.toml
examples/cubes/viewers/tui/: Cargo.toml  README.md
examples/cubes/viewers/tui/src/: app.rs  main.rs  ui.rs  world.rs
examples/germs/: README.md
examples/tour/: README.md  model.toml
examples/tour/behaviors/: script.bw
lib/: Cargo.toml  README.md  build.rs
lib/examples/: behavior.rs  election.rs  hotswap.rs  machine.rs  nested.rs  query.rs  repl.rs  shuffle.rs  stress.rs  subscribe.rs
lib/examples/common/: mod.rs
lib/src/: address.rs  error.rs  executor.rs  lib.rs  node.rs  query.rs  relay.rs  service.rs  sim.rs  snapshot.rs  string.rs  util.rs  util_net.rs  var.rs
lib/src/behavior/: dynlib.rs  lua.rs  mod.rs
lib/src/client/: async.rs  mod.rs  ws.rs
lib/src/entity/: mod.rs  storage.rs
lib/src/leader/: exec.rs  handle.rs  manager.rs  mod.rs
lib/src/machine/: error.rs  exec.rs  mod.rs
lib/src/machine/cmd/: detach.rs  eval.rs  goto.rs  invoke.rs  jump.rs  lib.rs  mod.rs  print.rs  query.rs  range.rs  register.rs  set.rs  sim.rs  spawn.rs
lib/src/machine/cmd/flow/: _loop.rs  call.rs  component.rs  end.rs  forin.rs  ifelse.rs  machine.rs  mod.rs  procedure.rs  state.rs
lib/src/machine/script/: parser.rs  util.rs
lib/src/model/: behavior.rs  intermediate.rs  mod.rs
lib/src/net/: framed_tcp.rs  mod.rs  msg_io.rs  quic.rs
lib/src/node/: handle.rs  pov.rs
lib/src/query/: process.rs
lib/src/rpc/: behavior.rs  leader.rs  mod.rs  node.rs  server.rs  worker.rs
lib/src/rpc/compat/: mod.rs  server_client.rs  transforms.rs
lib/src/rpc/msg/: client_server.rs  mod.rs
lib/src/server/: config.rs  grpc.rs  handle.rs  http.rs  mod.rs  pull.rs  query.rs  turn.rs
lib/src/server/grpc/: conversions.rs  service.rs
lib/src/worker/: config.rs  exec.rs  handle.rs  manager.rs  mod.rs  part.rs  pov.rs
proto/: worlds.proto
protobuf/: bigworlds.proto
