[package]
name = "bigworlds-grpc-client"
version = "0.1.0"
authors = ["Adam Wierchoła <adam@wierchola.com>"]
edition = "2021"

[dependencies]
tonic = "0.10"
prost = "0.12"
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tonic-web-wasm-client = "0.1"
poll-promise = { version = "0.3", features = ["web"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"] }
poll-promise = { version = "0.3", features = ["tokio"] }

[build-dependencies]
tonic-build = "0.10"
