[package]
name = "messageio-client"
version = "0.1.0"
authors = ["Adam Wierchoła <adam@wierchola.com>"]
edition = "2021"

[dependencies]
bigworlds = { path = "../../lib", features = []}
async-trait = "0.1"
message-io = "0.14.6"
bincode = "1.3.3"
serde_json = "1.0.86"
fnv = "1.0.7"
log = "0.4.17"
tokio = { version = "1", features = ["time"] }
tokio-util = { version = "0.7" }
