[package]
name = "rapier"
version = "0.1.0"
edition = "2024"

[dependencies]
bigworlds = { path = "../../../../lib" }
# bigworlds-client = { path = "../../../../clients/messageio-client", package = "messageio-client" }

rapier3d = "0.26.0"
fnv = "1.0.7"

tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
anyhow = "1"
env_logger = "0.11.8"
